Fixed post media on mobile devices

--- a/3/src/views/Tabs/Posts/components/Post/style.scss
+++ b/3/src/views/Tabs/Posts/components/Post/style.scss
@@ -70,6 +70,14 @@
   position: relative;
 }
 
+@media screen and (max-width: 550px) {
+  .post-media-pic {
+    width: 100%;
+    height: auto;
+    max-height: none;
+  }
+}
+
 .post-info {
   padding-top: 24px;
   padding-left: 16px;
